testCases type fixed, unused folders deleted
